--- a/src/ionic-soundwaves/package.json
+++ b/src/ionic-soundwaves/package.json
@@ -54,5 +54,5 @@
   "overrides": {
     "rollup": "4.44.0"
   },
-  "description": "An Ionic project"
+  "description": "IONIC Soundwaves: An Ionic project"
 }
